Fixing display on small mobiles.

--- a/src/index.css
+++ b/src/index.css
@@ -136,7 +136,7 @@ h3 {
 .block__heading {
   width: 100%;
   display: grid;
-  grid-template-columns: 50px 1fr;
+  grid-template-columns: 42px 1fr;
   justify-items: center;
   text-transform: capitalize;
   text-align: center;
@@ -342,6 +342,10 @@ h3 {
 
 /* History */
 
+#history {
+  padding: 0.75rem;
+}
+
 .history-block {
   border-top: 3px solid darkgrey;
   padding-bottom: 4rem;
@@ -372,9 +376,9 @@ h3 {
     transform 0.7s cubic-bezier(0.175, 0.885, 0.32, 1.275);
   opacity: 0;
   height: 0;
-  margin: 0 3rem;
+  margin: 0 2.25rem;
   max-width: 550px;
-  padding: 4rem 1rem 1rem;
+  padding: 4.75rem 1rem 1rem;
   clip-path: polygon(
     20% 0,
     31% 17%,
@@ -428,6 +432,10 @@ h3 {
 }
 
 @media screen and (min-width: 768px) {
+  #history {
+    padding: 2rem;
+  }
+
   .history__text {
     display: grid;
     grid-template-columns: repeat(2, calc(50% - (calc(var(--grid-gap) / 2))));
